<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/padding_75"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.twoshorts.touch.GameOverActivity$PlaceholderFragment"
    android:orientation="vertical"
    android:baselineAligned="true">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/game_over"
        android:id="@+id/over_gameOver"
        android:layout_gravity="center_horizontal"
        android:textSize="@dimen/size_52"
        android:textStyle="bold" />

    <TextView
        android:layout_width="@dimen/width_175"
        android:layout_height="wrap_content"
        android:text="@string/game_over_score"
        android:id="@+id/over_score"
        android:layout_gravity="center_horizontal"
        android:textSize="@dimen/size_18"
        android:textStyle="bold"
        android:paddingBottom="@dimen/padding_5"
        android:paddingTop="@dimen/padding_5"
        android:background="@drawable/rounded_corners"
        android:gravity="center" />

    <TextView
        android:layout_width="@dimen/width_175"
        android:layout_height="wrap_content"
        android:text="@string/game_over_high_score"
        android:id="@+id/over_high_score"
        android:layout_gravity="center_horizontal"
        android:textSize="@dimen/size_18"
        android:textStyle="bold"
        android:paddingBottom="@dimen/padding_5"
        android:paddingTop="@dimen/padding_5"
        android:background="@drawable/rounded_corners"
        android:gravity="center"
        android:layout_marginTop="@dimen/margin_15" />

    <Button
        android:layout_width="@dimen/width_175"
        android:layout_height="wrap_content"
        android:text="@string/over_retry"
        android:id="@+id/over_retry"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/margin_70"
        android:paddingTop="@dimen/padding_5"
        android:paddingBottom="@dimen/padding_5"
        android:background="@drawable/rounded_corners_dark"
        android:textStyle="bold"
        android:textSize="@dimen/size_28" />
</LinearLayout>
